--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">WordsApp</string>
-    <string name="button_continue">Continue</string>
+    <string name="button_continue">Продожить</string>
 </resources>
